kagemomiji/airsonic-advanced#350 temporary commit